--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -51,6 +51,11 @@
 
   </ul> <!-- ul.nav.flex-column -->
 
+  <div class="w-100 text-center">
+    <img style="margin-bottom: 20px;" src="/assets/img/site/follow.png">
+    <p class="site-subtitle">微信扫描关注公众号</p>
+  </div>
+
   <div class="sidebar-bottom mt-auto d-flex flex-wrap justify-content-center align-items-center">
 
     {% unless site.theme_mode %}
