--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -52,7 +52,7 @@
   </ul> <!-- ul.nav.flex-column -->
 
   <div class="w-100 text-center">
-    <img style="margin-bottom: 20px;" src="/assets/img/site/follow.png">
+    <img style="margin-bottom: 20px;" src="/assets/img/site/follow.png" alt="公众号二维码">
     <p class="site-subtitle">微信扫描关注公众号</p>
   </div>
 
