--- a/_includes/head.html
+++ b/_includes/head.html
@@ -89,6 +89,12 @@
     {% endif %}
   {% endif %}
 
+  <!-- Google ads -->
+  {% if site.google_ads_client %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{ site.google_ads_client }}"
+     crossorigin="anonymous"></script>
+  {% endif %}
+
   <!-- Bootstrap -->
   <link rel="stylesheet" href="{{ site.data.assets[origin].bootstrap.css | relative_url}}">
 
